<resources>
    <string name="app_name">AR Homes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="buyer">Buyer</string>
    <string name="seler">seler</string>
    <string name="button">Button</string>
    <string name="open_camera">Open Camera</string>
    <string name="todo">TODO</string>
    <string name="delete" />
    <string name="edit" />
    <string name="get" />
    <string name="send" />
    <string name="house_no1" />
    <string name="house_no" />
    <string name="address1" />
    <string name="address" />
    <string name="cell1" />
    <string name="cell" />
    <string name="name1" />
    <string name="name" />
    <string name="image" />
    <string name="upload" />
    <string name="choose" />
    <string name="submit">submit</string>
    <string name="title_activity_seller_location_map">Map</string>
</resources>
