<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/imageView16"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="80dp"
                android:layout_weight="1"
                android:src="@mipmap/kindpng_2378750" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="77dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/name1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:hint="Name"
                android:inputType="textPersonName"
                android:text="@string/name1"
                android:singleLine="true"
                android:textColor="@color/black"
                android:autofillHints="@string/name" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">



            <EditText
                android:id="@+id/phone1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="Phone"
                android:inputType="textPersonName"
                android:text="@string/cell1"
                android:singleLine="true"
                android:textColor="@color/black"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/address1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:singleLine="true"
                android:textColor="@color/black"
                android:text="@string/house_no1"
                android:hint="Address"/>
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/submit1"
                android:layout_width="140dp"
                android:layout_height="40dp"
                android:text="@string/submit"
                android:textSize="20dp"
                android:src="@mipmap/rounded_thumb"
                android:background="@color/notification_bg"
                android:textColor="@color/white"
                android:layout_marginLeft="20dp"

                />

            <Button
                android:id="@+id/btnlocation"
                android:layout_width="140dp"
                android:layout_height="40dp"
                android:background="@color/notification_bg"
                android:src="@mipmap/rounded_thumb"
                android:text="Location"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:layout_marginLeft="20dp"/>
        </LinearLayout>

    </LinearLayout>


</LinearLayout>
